kustomize/envs/local/patches/liferay-web.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  template:
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: web
        resources:
          requests:
            memory: "1Mi"
            cpu: "0.1"
          limits:
            memory: "4Gi"
            cpu: "12"
