kustomize/envs/local/patches/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: 0.liferaynetes.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: web-0
          servicePort: 8080
  - host: 1.liferaynetes.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: web-1
          servicePort: 8080
  - host: 2.liferaynetes.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: web-2
          servicePort: 8080
  - host: 3.liferaynetes.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: web-3
          servicePort: 8080
  - host: 4.liferaynetes.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: web-4
          servicePort: 8080
  - host: liferaynetes.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
  - host: "wwww.liferaynetes.localtest.me"
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
